RESOLVED FIXED151947
[cairo] Solid stroke of lines with thickness less than 1 pixel broken after r191658
https://bugs.webkit.org/show_bug.cgi?id=151947
Summary [cairo] Solid stroke of lines with thickness less than 1 pixel broken after r...
Alejandro G. Castro
Reported 2015-12-07 10:33:43 PST
After that commit the mathml roots were not drawing correctly because sometime the line thickness is less than zero and this situation is not controlled anymore.
Attachments
Patch (4.53 KB, patch)
2015-12-07 10:47 PST, Frédéric Wang Nélar
mrobinson: review+
Frédéric Wang Nélar
Comment 1 2015-12-07 10:47:49 PST
Frédéric Wang Nélar
Comment 2 2015-12-08 01:18:03 PST
Note You need to log in before you can comment on or make changes to this bug.